--- a/Daniel/CSS/vistapagar.css
+++ b/Daniel/CSS/vistapagar.css
@@ -1,30 +1,8 @@
-h1{
-    position: relative;
-    text-align: right;
-    margin-right: 10%;
-    height: 20px;
+.imgperfil {
+    width: 80px;
 }
 
-.cerrarsesion{
-    display: block;
-    position: relative;
-    margin-left: 73%;
-    width: max-content;
-}
-
-.imgperfil{
-    border: 1px solid black;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-    margin-top: 1%;
-    margin-right: 2%;
-    width: 100px;
-    height: 100px;
-}
-
-.infoplan{
+.infoplan {
     display: flex;
     flex-direction: column;
     position: relative;
@@ -32,89 +10,119 @@ h1{
     margin-top: 1%;
 }
 
-h2{
+h2 {
     margin-right: 32%;
 }
 
-.imgplan{
+.imgplan {
     text-align: center;
     width: 50%;
     height: 200px;
     margin-left: 25%;
 }
 
-.formulario{
+.formulario {
     text-align: center;
     margin-top: 1%;
 }
 
-article{
+article {
     margin-bottom: 1%;
 }
 
 
 
 
-.tarjeta{
+.tarjeta {
     position: absolute;
     margin-left: 20%;
 }
 
-.inputtarjeta{
+.inputtarjeta {
     margin-left: 10px;
     width: 200px;
     height: 20px;
 }
 
-.cvc{
+.cvc {
     position: absolute;
-    margin-left: 20% ;
+    margin-left: 20%;
     margin-top: 5%;
 }
 
-.inputcvc{
+.inputcvc {
     margin-left: 10px;
     width: 200px;
-    height: 20px; 
+    height: 20px;
 }
 
-.vto{
+.vto {
     position: absolute;
     margin-left: 60%;
 }
 
-.inputvto{
+.inputvto {
     margin-left: 100px;
     width: 200px;
     height: 20px;
 }
 
-.nombre{
+.nombre {
     position: absolute;
     margin-left: 60%;
-    margin-top: 5% ;
+    margin-top: 5%;
 }
 
-.inputnombre{
+.inputnombre {
     margin-left: 10px;
     width: 200px;
     height: 20px;
 }
 
-.botones{
+.botones {
     position: absolute;
     margin-left: 25%;
     margin-top: 10%;
-    margin-bottom: 10%; 
+    margin-bottom: 10%;
 }
 
-.boton{
+.boton {
     margin-right: 10px;
     height: 40px;
     width: 400px;
 }
 
+.headerPerfil {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    /* Dos columnas del mismo ancho */
+    grid-template-rows: auto auto;
+    /* Dos filas del mismo alto */
+    gap: 10px;
+    /* Espacio entre las celdas */
+    justify-content: end;
+    /* Alinea al final de la pagina */
+}
 
+.nombreUsuario {
+    grid-column: 1;
+    /* Ocupa dos columnas completas */
+}
 
+.imagenPerfil {
+    grid-column: 2;
+    /* Ocupa la primera columna */
+    display: flex;
+    /* Para manejar la imagen dentro del 'a' */
+    align-content: center;
+    /* Para centrar la imagen del perfil */
+    padding-left: 15px;
+    padding-right: 15px;
+}
 
-
+.cerrarSesion {
+    grid-column: 1;
+    /* Ocupa la segunda columna */
+    grid-row: 2;
+    /* Ocupa la segunda fila */
+}
