--- a/css/vista_03_pagar.css
+++ b/css/vista_03_pagar.css
@@ -1,11 +1,69 @@
-.contenedor_header {
-    position: absolute;
-    right: 0%;
+body {
     display: grid;
-    grid-template-areas: "header_item1    header_item1                                header_item3"
-                         "header_item2                                                header_item3";
+    grid-template-areas: 
+                            'contenedor_header'
+                            'contenedor_main'
+                            'contenedor_footer';
+    height: 100%;
+    width: 100%;
 }
 
-.header_item1 { grid-area: header_item1;}
-.header_item2 { grid-area: header_item2;}
-.header_item3 { grid-area: header_item3; width: 10px; height: auto; border-radius: 50%;}
+.header_item1 { grid-area: nombre_usuario; font-weight: bold; text-align: right; font-size: 25px;}
+.header_item2 { grid-area: cerrar_sesion; align-self: start; text-align: right; font-size: 15px;}
+.header_item3 { grid-area: avatar; width: 25%;  border-radius: 100%; background-size: cover; background-position: center;}
+.header_item2:hover{
+    transform: scale(1.2);
+}
+.header_item3:hover{
+    transform: scale(1.2);
+}
+
+.contenedor_header {
+    grid-area: contenedor_header;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-areas: 
+                        'nombre_usuario avatar'
+                        'cerrar_sesion avatar';
+    gap: 10px;
+    padding: 10px;
+    justify-items: end;
+}
+
+.contenedor_main {
+    grid-area: contenedor_main;
+    align-items: stretch;
+    display: grid;
+    grid-template-areas:
+                    'plan             plan'
+                    'imagen    descripcion'
+                    'formulario formulario';
+}
+
+.plan {
+    grid-area: plan;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+}
+.imagen {
+    grid-area: imagen;
+    width: 35%;
+    height: auto;
+}
+.descripcion {
+    grid-area: descripcion;
+}
+.formulario {
+    grid-area: formulario;
+    display: flex;
+    flex-wrap: wrap;
+}
+.boton:hover{
+    transform: scale(1.3);
+}
+
+.contenedor_footer {
+    grid-area: contenedor_footer;
+    object-position: bottom;
+}
