--- a/CSS/planespremium.css
+++ b/CSS/planespremium.css
@@ -1,75 +1,199 @@
-.imgperfil {
-    width: 80px;
+h1{
+    position: relative;
+    text-align: right;
+    margin-right: 10%;
+    height: 20px;
 }
 
-.imgPremium {
-    width: 200px;
-    height: 200px;
+.cerrarsesion{
+    display: block;
+    position: relative;
+    margin-left: 73%;
+    width: max-content;
 }
 
-.formulario {
+.imgperfil{
+    border: 1px solid black;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin-top: 1%;
+    margin-right: 2%;
+    width: 100px;
+    height: 100px;
+}
+
+.planes{
+    margin-top: 5%;
+    margin-left: 20%;
+    width: 80%;
+}
+.formulario{
     display: grid;
-    grid-template-columns: 110px 110px 110px;
-    gap: 10%;
-    text-align: center;
-    justify-content: center;
+    grid-template-columns: auto auto auto;
 }
 
-.articuloPremium {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    row-gap: 20px;
+.formulario, img{
+    width: 70%;
 }
 
-.botones {
-    display: grid;
-    grid-template-columns: 200px 200px;
-    grid-template-rows: 50px;
-    gap: 50px;
-    text-align: center;
-    justify-content: center;
-    margin-top: 30px;
+input{
+    display: block;
 }
 
-.botones a button {
-    width: 100%;
-    height: 100%;
-    padding: 20px;
+.botones{
+    margin-top: 2%;
+    margin-left: 7%;
+}
+
+.boton{
+    width: 300px;
+    padding: 10px;
+    margin: 1%;
 }
 
 
-.headerPerfil {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    /* Dos columnas del mismo ancho */
-    grid-template-rows: auto auto;
-    /* Dos filas del mismo alto */
-    gap: 10px;
-    /* Espacio entre las celdas */
-    justify-content: end;
-    /* Alinea al final de la pagina */
+/* Estilos para tablet (ancho máximo de 768px) */
+@media screen and (max-width: 768px) {
+    h1 {
+      text-align: center; /* Centrar el nombre de usuario */
+      margin-right: 0; /* Eliminar el margen derecho */
+      margin-top: 20px; /* Ajustar espacio superior */
+    }
+  
+    .cerrarsesion {
+      margin-left: 10px; /* Ajustar posición de "Cerrar sesión" */
+      margin-right: 10px; /* Ajustar margen derecho */
+      width: 100%; /* Ocupar todo el ancho disponible */
+    }
+  
+    .imgperfil {
+      width: 50px; /* Redimensionar la imagen de perfil */
+      height: 50px; /* Redimensionar la imagen de perfil */
+      top: 10px; /* Ajustar posición superior */
+      right: 10px; /* Ajustar posición derecha */
+    }
+  
+    .planes {
+      margin-top: 5%; /* Ajustar espacio superior */
+      margin-left: 10%; /* Ajustar margen izquierdo */
+      width: 80%; /* Ajustar ancho */
+    }
+  
+    .formulario {
+      display: flex; /* Cambiar a un diseño flexible */
+      flex-direction: column; /* Cambiar dirección de columnas */
+      align-items: center; /* Centrar elementos del formulario */
+    }
+  
+    .formulario img {
+      width: 50%; /* Redimensionar las imágenes de los planes */
+      margin-bottom: 10px; /* Agregar espacio entre las imágenes */
+    }
+  
+    input {
+      display: block;
+      margin-bottom: 10px; /* Agregar espacio entre campos de radio */
+    }
+  
+    .botones {
+      margin-top: 20px; /* Ajustar espacio superior */
+      margin-left: 0; /* Eliminar margen izquierdo */
+      display: flex; /* Cambiar a un diseño flexible */
+      flex-direction: column; /* Cambiar dirección de columnas */
+      align-items: center; /* Centrar botones */
+    }
+  
+    .boton {
+      width: 100%; /* Ocupar todo el ancho disponible */
+      margin: 10px 0; /* Agregar espacio vertical entre botones */
+    }
+
+    footer{
+        display: none;
+    }
+  }
+  
+  /* Estilos para smartphone (ancho máximo de 480px) */
+  @media screen and (max-width: 480px) {
+    h1 {
+      margin-top: 10px; /* Ajustar espacio superior en teléfono */
+    }
+  
+    .cerrarsesion {
+      margin-left: 10px; /* Ajustar posición de "Cerrar sesión" */
+      margin-right: 10px; /* Ajustar margen derecho */
+      width: 100%; /* Ocupar todo el ancho disponible */
+    }
+  
+    .imgperfil {
+      width: 30px; /* Redimensionar la imagen de perfil */
+      height: 30px; /* Redimensionar la imagen de perfil */
+      top: 10px; /* Ajustar posición superior */
+      right: 10px; /* Ajustar posición derecha */
+    }
+  
+    .planes {
+      margin-top: 5%; /* Ajustar espacio superior */
+      margin-left: 5%; /* Ajustar margen izquierdo */
+      width: 90%; /* Ajustar ancho */
+    }
+  
+    .formulario {
+      display: flex; /* Cambiar a un diseño flexible */
+      flex-direction: column; /* Cambiar dirección de columnas */
+      align-items: center; /* Centrar elementos del formulario */
+    }
+  
+    .formulario img {
+      width: 50%; /* Redimensionar las imágenes de los planes */
+      margin-bottom: 10px; /* Agregar espacio entre las imágenes */
+    }
+  
+    input {
+      display: block;
+      margin-bottom: 10px; /* Agregar espacio entre campos de radio */
+    }
+  
+    .botones {
+      margin-top: 20px; /* Ajustar espacio superior */
+      margin-left: 0; /* Eliminar margen izquierdo */
+      display: flex; /* Cambiar a un diseño flexible */
+      flex-direction: column; /* Cambiar dirección de columnas */
+      align-items: center; /* Centrar botones */
+    }
+  
+    .boton {
+      width: 100%; /* Ocupar todo el ancho disponible */
+      margin: 10px 0; /* Agregar espacio vertical entre botones */
+    }
+
+    footer{
+        display: none;
+    }
+  }
+  
+
+  /* Colores principales */
+body {
+  background-color: black; /* Fondo negro */
+  color: purple; /* Texto en morado */
 }
 
-.nombreUsuario {
-    grid-column: 1;
-    /* Ocupa dos columnas completas */
+/* Estilos para los botones */
+.boton1 {
+  background-color: purple; /* Fondo morado */
+  color: black; /* Texto en negro */
 }
 
-.imagenPerfil {
-    grid-column: 2;
-    /* Ocupa la primera columna */
-    display: flex;
-    /* Para manejar la imagen dentro del 'a' */
-    align-content: center;
-    /* Para centrar la imagen del perfil */
-    padding-left: 15px;
-    padding-right: 15px;
+.boton2 {
+  background-color: black; /* Fondo negro */
+  color: purple; /* Texto en morado */
 }
 
-.cerrarSesion {
-    grid-column: 1;
-    /* Ocupa la segunda columna */
-    grid-row: 2;
-    /* Ocupa la segunda fila */
+/* Estilos para los enlaces */
+a {
+  color: purple; /* Color morado para enlaces */
 }
+
