modificacion vista "Registro"
El profe en el video dijo que los inputs tienen que cubrir toda la ventana cuando es resolucion de celular o tablet, modifique el width de los inputs y ahora se ve asi cuando se reduce la recolucion

--- a/CSS/vistaperfil.css
+++ b/CSS/vistaperfil.css
@@ -34,7 +34,8 @@ h1{
 label{
     display: inline-block;
     width: 200px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+    margin-top: 20px;
     color: #800080;
 }
 
@@ -54,7 +55,6 @@ input{
 }
 
 .linkpremium{
-    display: block;
     margin-top: 30px;
     margin-bottom: 20px;
     color: #800080;
@@ -117,6 +117,7 @@ input{
   
     input {
       height: 30px; /* Ajustar la altura de los campos de entrada */
+      width: 100%;
     }
   
     .inputfecha {
@@ -176,6 +177,7 @@ input{
   
     input {
       height: 20px; /* Ajustar la altura de los campos de entrada */
+      width: 100%;
     }
   
     .inputfecha {
