--- a/CSS/vistapantallaprincipal.css
+++ b/CSS/vistapantallaprincipal.css
@@ -148,31 +148,14 @@
         width: 100%;
         height: 100%;
     }
-    
+
     .reproductor{
         border: 1px solid black;
-        margin-left: 23%;
+        margin-left: auto;
         width: 75%;
-        height: 100px;
-        z-index: 2;
-    }
-    
-    .play{
-        position: absolute;
-        margin-top: 2%;
-        margin-left: 2%;
-    }
-    
-    .circle{
-        position: absolute;
-        margin-top: 2%;
-        margin-left: 30%;
-    }
-    
-    .square{
-        position: absolute;
-        margin-top: 2%;
-        margin-left: 70%;
+        padding: 15px;
+        display: flex;
+        justify-content: space-between;
     }
 
     
@@ -260,9 +243,9 @@
         gap: 5px;
     }
 
-    .reproductor {
-        margin-left: 0;
-        width: 100%;
+    .reproductor{
+        width: 80%;
+        margin-right: auto;
     }
 
     footer {
