--- a/CSS/planespremium.css
+++ b/CSS/planespremium.css
@@ -1,3 +1,7 @@
+iframe{
+    position: absolute;
+    bottom: 0px;
+}
 h1{
     position: relative;
     text-align: right;
@@ -120,8 +124,8 @@ input{
       margin: 10px 0; /* Agregar espacio vertical entre botones */
     }
 
-    footer{
-        display: none;
+    iframe{
+       position: relative;
     }
   }
   
